--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,13 +1,48 @@
 <!DOCTYPE html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>URL SHORTENER</title>
+  <title>URL_SHORTENER</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/9bb3ea2eaa.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  {{{ body }}}
+  <div class="container-fluid flex-column align-items-center justify-content-center mt-5 w-50">
+
+    <h1 class="text-center font-weight-bold">URL SHORTENER</h1>
+    <div class="container-fluid d-flex justify-content-center">
+      <img class="w-25 h-25"
+        src="https://assets-lighthouse.alphacamp.co/uploads/image/file/16716/ExportedContentImage_00.png" alt="img">
+    </div>
+    <form action="/" method="POST">
+      <div class="form-group mx-3 mb-3">
+        <label for="exampleInputPassword1"></label>
+        <div class="input-group mb-3">
+          <input type="text" class="form-control" name="originalUrl" placeholder="" aria-label=""
+            aria-describedby="basic-addon1">
+          <div class="input-group-prepend">
+            <button class="btn btn-outline-secondary" type="submit">Shorten URL</button>
+          </div>
+        </div>
+      </div>
+    </form>
+
+    <!-- partial templates will replace the part of "body" here -->
+    {{{ body }}}
+  </div>
+
+  <!-- include javascript files here -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 
 </html>
