--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -24,7 +24,7 @@
         <label for="exampleInputPassword1"></label>
         <div class="input-group mb-3">
           <input type="text" class="form-control" name="originalUrl" placeholder="" aria-label=""
-            aria-describedby="basic-addon1">
+            aria-describedby="basic-addon1" required>
           <div class="input-group-prepend">
             <button class="btn btn-outline-secondary" type="submit">Shorten URL</button>
           </div>
